--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@supabase/supabase-js": "^2.93.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
-    "next": "15.1.6",
+    "next": "^16.1.6",
     "pdf-lib": "^1.17.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0"
   },
@@ -26,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
